VSE Preview scaling issue when using proxies and Show Overexposed #44121

Closed
opened 2015-03-24 16:29:57 +01:00 by Roel Koster · 6 comments
Member

System Information
OSX 10.10.3 but I guess irrelevant

Blender Version
Broken: 2.74.2 (3bb7e14)
Also checked RC2 and shows same 'bug'

in Video Sequence Editor preview screen, with view settings on Proxy size anything smaller than 100%
the preview scales down as soon as 'Show Overexposed' value > 0

Exact steps for others to reproduce the error
Start new file,
goto Video Editing Screen Layout,
open an image or movie so it shows something in the preview window
open properties with N if not visible
Set Proxy Render size to 25% (as an example)
increase 'Show Overexposed' ( > 0)
observe scaling of preview..

thanks for looking into it..
Best Regards,
Roel
IRC: kostex

**System Information** OSX 10.10.3 but I guess irrelevant **Blender Version** Broken: 2.74.2 (3bb7e14) Also checked RC2 and shows same 'bug' in Video Sequence Editor preview screen, with view settings on Proxy size anything smaller than 100% the preview scales down as soon as 'Show Overexposed' value > 0 **Exact steps for others to reproduce the error** Start new file, goto Video Editing Screen Layout, open an image or movie so it shows something in the preview window open properties with N if not visible Set Proxy Render size to 25% (as an example) increase 'Show Overexposed' ( > 0) observe scaling of preview.. thanks for looking into it.. Best Regards, Roel IRC: kostex
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @kostex

Added subscriber: @kostex
Member

Added subscriber: @Blendify

Added subscriber: @Blendify

This issue was referenced by 581afa9da3

This issue was referenced by 581afa9da37e0adaea756c165af11b467e9b8852
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit 581afa9da3.

Closed by commit 581afa9da3.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44121
No description provided.