Fix T44121: VSE Preview scaling issue when using proxies and Show Overexposed